<resources>
    <string name="app_name">TravelApplication</string>

    <string name="nav_home">Home</string>
    <string name="nav_SettingLanguage">Setting language</string>
    <string name="nav_ChangePassword">Change Password</string>
    <string name="nav_AppInfo">App info</string>
    <string name="nav_Logout">Logout</string>

    <string name="action_home">Home</string>
    <string name="action_notice">List tour</string>
    <string name="action_Profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_bottom_nav">bottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>